# birdhomie

./: .dockerignore  .envrc.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  docker-compose.yml  grafana.json  messages.pot  pyproject.toml  test_process.py
.github/workflows/: ci.yml
migrations/: 001_initial.sql  002_add_focus_point.sql  003_add_face_annotations.sql  004_remove_focus_point.sql  005_add_cover_image.sql  006_add_ignored_status.sql  007_fix_duplicate_columns.sql  007_remove_auto_duplicate_columns.sql  008_remove_auto_duplicate_columns.sql  009_add_sync_cursors.sql  009_add_visits_soft_delete.sql  010_add_external_identifiers.sql  011_add_performance_indexes.sql  012_add_split_visit_support.sql
src/birdhomie/: __init__.py  app.py  classifier.py  config.py  constants.py  database.py  detector.py  face_annotation.py  gunicorn.conf.py  inaturalist.py  messages.pot  metrics.py  model_cache.py  processor.py  repositories.py  scheduler.py  unifi.py  utils.py  video_processor.py  visit_grouper.py  wikipedia.py
src/birdhomie/templates/: base.html  dashboard.html  file_detail.html  files_list.html  labeling.html  labeling_stats.html  macros.html  settings.html  species_detail.html  species_list.html  split_visit.html  tasks_list.html  visit_detail.html
src/birdhomie/translations/: messages.pot
src/birdhomie/translations/de/LC_MESSAGES/: messages.po
src/birdhomie/translations/en/LC_MESSAGES/: messages.po
tests/: conftest.py  test_classifier.py  test_detector.py  test_external_identifiers.py  test_inaturalist.py  test_processor_integration.py  test_repositories.py  test_routes_smoke.py  test_split_visit.py  test_video_processor.py  test_visit_grouper.py
