[project]
name = "birdhomie"
version = "0.1.0"
description = "Bird detection and classification system for UniFi Protect"
readme = "README.md"
authors = [
    { name = "Philipp Defner", email = "mail@notmyhostna.me" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
    "open-clip-torch>=3.2.0",
    "ultralytics>=8.3.248",
    "flask>=3.0",
    "flask-babel>=4.0.0",
    "flask-caching>=2.0.0",
    "apscheduler>=3.10",
    "requests>=2.31",
    "uiprotect>=7.0.0",
    "av>=13.0.0",
    "prometheus_client>=0.21.0",
    "gunicorn>=23.0.0",
]

[project.scripts]
birdhomie = "birdhomie.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
]

[tool.uv]
# Force opencv-python-headless instead of opencv-python (saves ~64MB)
# ultralytics depends on opencv-python, but headless works fine in Docker
override-dependencies = [
    "opencv-python>=4.13.0.90 ; sys_platform == 'never'",
]

# Use CPU-only PyTorch wheels (saves ~1.8GB vs CUDA version)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

